--- a/basic_focus_rework/localisation/focus_l_english.yml
+++ b/basic_focus_rework/localisation/focus_l_english.yml
@@ -2305,7 +2305,7 @@
  GEN_commit_to_status_quo:0 "Commit to Status Quo"
  GEN_commit_to_status_quo_desc:0 "Although we will not go as far as to declare neutrality, our safest bet is to ensure the current border status quo."
  GEN_limited_intervention:0 "Limited Intervention"
- GEN_limited_intervention_desc:0 "Any true centrist government will realize that there are times when actions must be made to preserve the borders our nation and the world."
+ GEN_limited_intervention_desc:0 "Any true centrist government will realize that there are times when actions must be made to preserve the borders of our nation and the world."
  GEN_no_one_tyrant:0 "No One Tyrant"
  GEN_no_one_tyrant_desc:0 "It's far too risky to allow one man or woman to hold all the power. We must ensure our nation is never subjected to a tyrant again."
  GEN_court_merchant_interests:0 "Court Merchant Interests"
@@ -2349,7 +2349,7 @@
  GEN_the_true_enemy:0 "The True Enemy"
  GEN_the_true_enemy_desc:0 "Obviously the true enemy of our great people are the communists. They must be destroyed."
  GEN_positive_violence:0 "Positive Violence"
- GEN_positive_violence_desc:0 "Our people must value violence as a violent trait in every honorable citizen of [ROOT.GetName]"
+ GEN_positive_violence_desc:0 "Our people must value violence as a vital trait in every honorable citizen of [ROOT.GetName]"
  GEN_enshrine_fascio:0 "Enshrine Fascio"
  GEN_enshrine_fascio_desc:0 "This Bundle of Sticks you can't break; Take them singly, with ease. You may break as you please; So, dissension your strength will unmake."
  GEN_the_leader:0 "The Leader"
@@ -2391,13 +2391,13 @@
  GEN_patriotism:0 "Patriotism"
  GEN_patriotism_desc:0 "We are the party for our country! If the people believe in our country, they will believe in us!"
  GEN_peace_through_strength:0 "Peace Through Strength"
- GEN_peace_through_strength_desc:0 "If we wish for peace in the world, we must not only be strong enough to scare of aggressors, but to keep the peace if necessary."
+ GEN_peace_through_strength_desc:0 "If we wish for peace in the world, we must not only be strong enough to scare off aggressors, but to keep the peace if necessary."
  GEN_protective_imperialism:0 "Protective Imperialism"
  GEN_protective_imperialism_desc:0 "Colonialism is, of course, evil, but would our weak neighbors rather be ruled by aggresive foreign powers or a kind, democratic neighbor?"
  GEN_government_grants:0 "Government Grants"
  GEN_government_grants_desc:0 "The best way to free a people is to educate them. It is our duty to support and fund these measures."
  GEN_support_urbanization:0 "Support Urbanization"
- GEN_support_urbanization_desc:0 "What defines modern society and progress? The beautiful cities that house them of course! Encouraging urbanization will move than pay off in the long run."
+ GEN_support_urbanization_desc:0 "What defines modern society and progress? The beautiful cities that house them of course! Encouraging urbanization will more than pay off in the long run."
  GEN_end_voter_restrictions:0 "End Voter Restrictions"
  GEN_end_voter_restrictions_desc:0 "How can we claim to be the paragorn of freedom and liberalism if our elections aren't truly free? We will no longer be chained by this hypocrisy."
  GEN_limited_welfare:0 "Limited Welfare"
@@ -2452,7 +2452,7 @@
  GEN_eternal_revolution_desc:0 "The fight is never over until the whole world has been brought to the light of communism! Sacrifices must be made to achieve world freedom."
  GEN_invite_foreign_enterprises:0 "Invite Foreign Enterprises"
  GEN_invite_foreign_enterprises_desc:0 "In order to free the peasant, we must make him a worker! No worker can work without a factory, so for now we will invite foreign companies to build industry for us."
- GEN_collectivize_our_food:0 "Collective Our Food"
+ GEN_collectivize_our_food:0 "Collectivize Our Food"
  GEN_collectivize_our_food_desc:0 "Private farms are inefficient, space consuming, and desperately vulnerable to market forces. We will collectivize our food into communal farms where all may work."
  GEN_police_state:0 "Police State"
  GEN_police_state_desc:0 "Despite the growth and clear benefits of communism, there are insidious elements of society that seek to undermine us. We must follow the Soviet footstep and adopt secret police forces to hunt these traitors down."
