--- a/basic_focus_rework/localisation/ideas_l_english.yml
+++ b/basic_focus_rework/localisation/ideas_l_english.yml
@@ -2761,8 +2761,8 @@
  proletariat_dictatorship_desc:0 "With the [ROOT.GetAdjective people behind us, [ROOt.GetLeader] will lead [ROOT.GetName] to glory!"
  abolished_private_property:0 "Abolished Private Property"
  abolished_private_property_desc:0 "Without private property, we've found it easier to push for state needs over individual needs."
- consciouss_masses:0 "Consciouss Masses"
- consciouss_masses_desc:0 "Brought to light by communism, the masses repay by bringing knowledge to the community."
+ conscious_masses:0 "Consciouss Masses"
+ conscious_masses_desc:0 "Brought to light by communism, the masses repay by bringing knowledge to the community."
  soviet_democracy:0 "Soviet Democracy"
  soviet_democracy_desc:0 "By fulfilling our promise of true representation, we have the love and support of the people."
  eternal_revolutionary:0 "Eternal Revolutionary"
